--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -10,6 +10,10 @@
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('property') }}">Property</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="{{ url_for('properties') }}">Properties</a>
       </li>
     </ul>
   </div>
