--- a/app/templates/properties.html
+++ b/app/templates/properties.html
@@ -5,7 +5,7 @@
     <ul>
     {% for item in items %}
         <li> 
-            <img src="{{ url_for('get_property', filename=item) }}"/>
+            <img src="{{ url_for('get_prop', filename=item) }}"/>
         </li>
     {% endfor %}
     </ul>
