--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,20 @@
 body {
     padding-top: 50px;
 }
+
+.grid ul {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+    list-style-type: none;
+}
+
+img {
+    flex: 0 0 32%;
+    height: 300px;
+    margin-bottom: 5px;
+}
+
+.grid li{
+    padding: 2em;
+}
