--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,7 +11,7 @@
       <li class="nav-item active">
         <a class="nav-link" href="{{ url_for('about') }}">About</a>
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('property') }}">Property</a>
+        <a class="nav-link" href="{{ url_for('property') }}">New Property</a>
       <li class="nav-item active">
         <a class="nav-link" href="{{ url_for('properties') }}">Properties</a>
       </li>
